--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
             <version>1.9.5</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>lucene.transform</groupId>
+            <artifactId>lucenetransform</artifactId>
+            <version>0.9.2.2</version>
+        </dependency>
     </dependencies>
 
     <build>
