--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,12 @@
     <artifactId>search-api</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <scm>
+        <connection>scm:git:git@github.com:muzima/search-api.git</connection>
+        <url>scm:git:git@github.com:muzima/search-api.git</url>
+        <developerConnection>scm:git:git@github.com:muzima/search-api.git</developerConnection>
+    </scm>
+
     <dependencies>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -120,10 +126,51 @@
                 </plugin>
             </plugins>
         </pluginManagement>
+        <plugins>
+            <plugin>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.7</version>
+                <configuration>
+                    <altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo
+                    </altDeploymentRepository>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.github.github</groupId>
+                <artifactId>site-maven-plugin</artifactId>
+                <version>0.8</version>
+                <configuration>
+                    <message>Maven artifacts for ${project.artifactId} ${project.version}</message>
+                    <noJekyll>true</noJekyll>
+                    <outputDirectory>${project.build.directory}/mvn-repo</outputDirectory>
+                    <branch>refs/heads/mvn-repo</branch>
+                    <includes>
+                        <include>**/*</include>
+                    </includes>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>site</goal>
+                        </goals>
+                        <phase>deploy</phase>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
     </build>
+
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub ${project.artifactId} Repository</name>
+            <url>https://raw.github.com/muzima/${project.artifactId}/mvn-repo</url>
+        </repository>
+    </distributionManagement>
 
     <properties>
         <javaCompilerVersion>1.6</javaCompilerVersion>
+        <github.global.server>github</github.global.server>
     </properties>
 
 </project>
