--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
     <artifactId>search-api</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <scm>
-        <connection>scm:git:git@github.com:muzima/search-api.git</connection>
-        <url>scm:git:git@github.com:muzima/search-api.git</url>
-        <developerConnection>scm:git:git@github.com:muzima/search-api.git</developerConnection>
-    </scm>
+    <!--<scm>-->
+        <!--<connection>scm:git:git@github.com:muzima/search-api.git</connection>-->
+        <!--<url>scm:git:git@github.com:muzima/search-api.git</url>-->
+        <!--<developerConnection>scm:git:git@github.com:muzima/search-api.git</developerConnection>-->
+    <!--</scm>-->
 
     <dependencies>
         <dependency>
@@ -143,10 +143,12 @@
                     <message>Maven artifacts for ${project.artifactId} ${project.version}</message>
                     <noJekyll>true</noJekyll>
                     <outputDirectory>${project.build.directory}/mvn-repo</outputDirectory>
-                    <branch>refs/heads/mvn-repo</branch>
+                    <branch>refs/heads/snapshots</branch>
                     <includes>
                         <include>**/*</include>
                     </includes>
+                    <repositoryName>muzima-maven</repositoryName>
+                    <repositoryOwner>muzima</repositoryOwner>
                 </configuration>
                 <executions>
                     <execution>
