--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,6 @@
     <artifactId>search-api</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <!--<scm>-->
-        <!--<connection>scm:git:git@github.com:muzima/search-api.git</connection>-->
-        <!--<url>scm:git:git@github.com:muzima/search-api.git</url>-->
-        <!--<developerConnection>scm:git:git@github.com:muzima/search-api.git</developerConnection>-->
-    <!--</scm>-->
-
     <dependencies>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -143,7 +137,7 @@
                     <message>Maven artifacts for ${project.artifactId} ${project.version}</message>
                     <noJekyll>true</noJekyll>
                     <outputDirectory>${project.build.directory}/mvn-repo</outputDirectory>
-                    <branch>refs/heads/snapshots</branch>
+                    <branch>refs/heads/search-api</branch>
                     <includes>
                         <include>**/*</include>
                     </includes>
